Final shit fuck bussines solutions

--- a/InternDiaryV2/Views/Pages/AdminPage.xaml
+++ b/InternDiaryV2/Views/Pages/AdminPage.xaml
@@ -23,11 +23,11 @@
                                 <Setter.Value>
                                     <ControlTemplate TargetType="ListViewItem">
                                         <StackPanel>
-                                            <TextBlock Text="{Binding FullName}"
+                                            <TextBlock Text="{Binding FullName, StringFormat=ФИО: {0}}"
                                                        x:Name="TextBlock1"/>
-                                            <TextBlock Text="{Binding Role.Title}"/>
-                                            <TextBlock Text="{Binding Login}"/>
-                                            <TextBlock Text="{Binding Password}"/>
+                                            <TextBlock Text="{Binding Role.Title, StringFormat=Роль: {0}}"/>
+                                            <TextBlock Text="{Binding Login, StringFormat=Логин: {0}}"/>
+                                            <TextBlock Text="{Binding Password, StringFormat=Пароль: {0}}"/>
                                         </StackPanel>
                                         <ControlTemplate.Triggers>
                                             <Trigger Property="IsSelected" Value="True">
@@ -41,7 +41,8 @@
                     </ListView.ItemContainerStyle>
                 </ListView>
                 <StackPanel Grid.Column="1"
-                            VerticalAlignment="Center">
+                            VerticalAlignment="Center"
+                            Margin="10">
                     <TextBlock Text="Фамилия"/>
                     <TextBox Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}"/>
                     <TextBlock Text="Имя"/>
@@ -58,13 +59,16 @@
                               DisplayMemberPath="Title"/>
                     <Button x:Name="AddUserButton"
                             Content="Добавить"
-                            Click="AddUserButton_Click"/>
+                            Click="AddUserButton_Click"
+                            Margin="0,10"/>
                     <Button x:Name="UpdateUserButton"
                             Content="Обновить"
-                            Click="UpdateUserButton_Click"/>
+                            Click="UpdateUserButton_Click"
+                            Margin="0,10"/>
                     <Button x:Name="RemoveUserButton"
                             Content="Удалить"
-                            Click="RemoveUserButton_Click"/>
+                            Click="RemoveUserButton_Click"
+                            Margin="0,10"/>
                 </StackPanel>
             </Grid>
         </TabItem>
@@ -83,11 +87,11 @@
                                 <Setter.Value>
                                     <ControlTemplate TargetType="ListViewItem">
                                         <StackPanel>
-                                            <TextBlock Text="{Binding FullName}"
+                                            <TextBlock Text="{Binding FullName, StringFormat=ФИО: {0}}"
                                                        x:Name="TextBlock1"/>
-                                            <TextBlock Text="{Binding Organization.Title}"/>
-                                            <TextBlock Text="{Binding Login}"/>
-                                            <TextBlock Text="{Binding Password}"/>
+                                            <TextBlock Text="{Binding Organization.Title, StringFormat=Организация: {0}}"/>
+                                            <TextBlock Text="{Binding Login, StringFormat=Логин: {0}}"/>
+                                            <TextBlock Text="{Binding Password, StringFormat=Пароль: {0}}"/>
                                         </StackPanel>
                                         <ControlTemplate.Triggers>
                                             <Trigger Property="IsSelected" Value="True">
@@ -101,7 +105,8 @@
                     </ListView.ItemContainerStyle>
                 </ListView>
                 <StackPanel Grid.Column="1"
-                            VerticalAlignment="Center">
+                            VerticalAlignment="Center"
+                            Margin="10">
                     <TextBlock Text="Фамилия"/>
                     <TextBox Text="{Binding ClastName, UpdateSourceTrigger=PropertyChanged}"/>
                     <TextBlock Text="Имя"/>
@@ -118,13 +123,16 @@
                               DisplayMemberPath="Title"/>
                     <Button x:Name="AddCuratorButton"
                             Content="Добавить"
-                            Click="AddCuratorButton_Click"/>
+                            Click="AddCuratorButton_Click"
+                            Margin="0,10"/>
                     <Button x:Name="UpdateCuratorButton"
                             Content="Обновить"
-                            Click="UpdateCuratorButton_Click"/>
+                            Click="UpdateCuratorButton_Click"
+                            Margin="0,10"/>
                     <Button x:Name="RemoveCuratorButton"
                             Content="Удалить"
-                            Click="RemoveCuratorButton_Click"/>
+                            Click="RemoveCuratorButton_Click"
+                            Margin="0,10"/>
                 </StackPanel>
             </Grid>
         </TabItem>
@@ -158,18 +166,22 @@
                     </ListView.ItemContainerStyle>
                 </ListView>
                 <StackPanel Grid.Column="1"
-                            VerticalAlignment="Center">
+                            VerticalAlignment="Center"
+                            Margin="10">
                     <TextBlock Text="Название"/>
                     <TextBox Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}"/>
                     <Button x:Name="AddOrganizationButton"
                             Content="Добавить"
-                            Click="AddOrganizationButton_Click"/>
+                            Click="AddOrganizationButton_Click"
+                            Margin="0,10"/>
                     <Button x:Name="UpdateOrganizationButton"
                             Content="Обновить"
-                            Click="UpdateOrganizationButton_Click"/>
+                            Click="UpdateOrganizationButton_Click"
+                            Margin="0,10"/>
                     <Button x:Name="RemoveOrganizationButton"
                             Content="Удалить"
-                            Click="RemoveOrganizationButton_Click"/>
+                            Click="RemoveOrganizationButton_Click"
+                            Margin="0,10"/>
                 </StackPanel>
             </Grid>
         </TabItem>
@@ -207,7 +219,8 @@
                     </ListView.ItemContainerStyle>
                 </ListView>
                 <StackPanel Grid.Column="1"
-                            VerticalAlignment="Center">
+                            VerticalAlignment="Center"
+                            Margin="10">
                     <TextBlock Text="Дата начала"/>
                     <DatePicker SelectedDate="{Binding StartDate, UpdateSourceTrigger=PropertyChanged}"/>
                     <TextBlock Text="Дата конца"/>
@@ -218,13 +231,16 @@
                               DisplayMemberPath="CuratorInfo"/>
                     <Button x:Name="AddPracticeButton"
                             Content="Добавить"
-                            Click="AddPracticeButton_Click"/>
+                            Click="AddPracticeButton_Click"
+                            Margin="0,10"/>
                     <Button x:Name="UpdatePracticeButton"
                             Content="Обновить"
-                            Click="UpdatePracticeButton_Click"/>
+                            Click="UpdatePracticeButton_Click"
+                            Margin="0,10"/>
                     <Button x:Name="RemovePracticeButton"
                             Content="Удалить"
-                            Click="RemovePracticeButton_Click"/>
+                            Click="RemovePracticeButton_Click"
+                            Margin="0,10"/>
                 </StackPanel>
             </Grid>
         </TabItem>
