--- a/InternDiaryV2/Views/Pages/DiaryPage.xaml
+++ b/InternDiaryV2/Views/Pages/DiaryPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="InternDiaryV2.Views.Pages.UserPage"
+﻿<Page x:Class="InternDiaryV2.Views.Pages.DiaryPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,14 +6,32 @@
       xmlns:local="clr-namespace:InternDiaryV2.Views.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="UserPage">
-
+      Title="DiaryPage">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height=".2*"/>
             <RowDefinition/>
-            <RowDefinition Height=".3*"/>
         </Grid.RowDefinitions>
-        <ListView Grid.Row="0"
+        <StackPanel Grid.Row="0"
+                    VerticalAlignment="Center">
+            <TextBlock Text="{Binding Diary.User.FullName}"
+                       Grid.Row="0"
+                       HorizontalAlignment="Center"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <ComboBox ItemsSource="{Binding Grades}"
+                          SelectedItem="{Binding SelectedGrade}"
+                          Width="150" Margin="4"/>
+                <ComboBox ItemsSource="{Binding AttendStatuses}"
+                          SelectedItem="{Binding SelectedAttendStatus}"
+                          Width="150" Margin="4"/>
+                <Button x:Name="UpdateDayButton"
+                        Width="150"
+                        Margin="4"
+                        Click="UpdateDayButton_Click"
+                        Content="Записать данные"/>
+            </StackPanel>
+        </StackPanel>
+        <ListView Grid.Row="1"
                   ItemsSource="{Binding Days}"
                   SelectedItem="{Binding SelectedDay}"
                   HorizontalContentAlignment="Stretch"
@@ -69,21 +87,5 @@
                 </Style>
             </ListView.ItemContainerStyle>
         </ListView>
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition Width="200"/>
-            </Grid.ColumnDefinitions>
-            <TextBox Margin="10"
-                     Grid.Column="0"
-                     Text="{Binding Content, UpdateSourceTrigger=PropertyChanged}"
-                     TextWrapping="Wrap"/>
-            <Button Grid.Column="1"
-                    Content="Обновить содержание"
-                    Height="35"
-                    Width="150"
-                    x:Name="UpdateDayButton"
-                    Click="UpdateDayButton_Click"/>
-        </Grid>
     </Grid>
 </Page>
