--- a/InternDiaryV2/Views/Pages/PracticePage.xaml
+++ b/InternDiaryV2/Views/Pages/PracticePage.xaml
@@ -66,17 +66,20 @@
             </ListView.ItemContainerStyle>
         </ListView>
         <StackPanel Grid.Column="1"
-                    VerticalAlignment="Center">
+                    VerticalAlignment="Center"
+                    Margin="10">
             <TextBlock Text="Практиканты"/>
             <ComboBox ItemsSource="{Binding Users}"
                       SelectedItem="{Binding SelectedUser}"
                       DisplayMemberPath="FullName"/>
             <Button x:Name="AddDiaryButton"
                     Content="Добавить дневник"
-                    Click="AddDiaryButton_Click"/>
+                    Click="AddDiaryButton_Click"
+                    Margin="0,10"/>
             <Button x:Name="DeleteDiaryButton"
                     Content="Удалить дневник"
-                    Click="DeleteDiaryButton_Click"/>
+                    Click="DeleteDiaryButton_Click"
+                    Margin="0,10"/>
         </StackPanel>
     </Grid>
 </Page>
