--- a/InternDiaryV2/Views/Pages/UserPage.xaml
+++ b/InternDiaryV2/Views/Pages/UserPage.xaml
@@ -18,13 +18,16 @@
                   SelectedItem="{Binding SelectedDay}"
                   HorizontalContentAlignment="Stretch"
                   HorizontalAlignment="Stretch"
-                  ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                  ScrollViewer.VerticalScrollBarVisibility="Visible"
+                  VerticalAlignment="Stretch">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="ListViewItem">
-                                <Border Background="Transparent">
+                                <Border Background="Transparent"
+                                        Margin="2,5">
                                     <Grid>
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="150"/>
