--- a/InternDiaryV2/Views/Windows/ManagerWindow.xaml
+++ b/InternDiaryV2/Views/Windows/ManagerWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InternDiaryV2.Views.Windows"
         mc:Ignorable="d"
+        Icon="\Resources\Icons\Icon.ico"
         Title="ManagerWindow" Height="450" Width="800"
         WindowStartupLocation="CenterScreen">
     <Frame x:Name="ManagerFrame"/>
