--- a/InternDiaryV2/Views/Pages/AdminPage.xaml
+++ b/InternDiaryV2/Views/Pages/AdminPage.xaml
@@ -16,22 +16,29 @@
                 </Grid.ColumnDefinitions>
                 <ListView Grid.Column="0"
                           SelectedItem="{Binding SelectedUser}"
-                          ItemsSource="{Binding Users}">
+                          ItemsSource="{Binding Users}"
+                          ScrollViewer.VerticalScrollBarVisibility="Visible"
+                          VerticalAlignment="Stretch">
                     <ListView.ItemContainerStyle>
                         <Style TargetType="ListViewItem">
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate TargetType="ListViewItem">
-                                        <StackPanel>
-                                            <TextBlock Text="{Binding FullName, StringFormat=ФИО: {0}}"
+                                        <Border BorderThickness="1"
+                                                BorderBrush="Black"
+                                                Margin="4"
+                                                x:Name="Border">
+                                            <StackPanel Margin="3">
+                                                <TextBlock Text="{Binding FullName, StringFormat=ФИО: {0}}"
                                                        x:Name="TextBlock1"/>
-                                            <TextBlock Text="{Binding Role.Title, StringFormat=Роль: {0}}"/>
-                                            <TextBlock Text="{Binding Login, StringFormat=Логин: {0}}"/>
-                                            <TextBlock Text="{Binding Password, StringFormat=Пароль: {0}}"/>
-                                        </StackPanel>
+                                                <TextBlock Text="{Binding Role.Title, StringFormat=Роль: {0}}"/>
+                                                <TextBlock Text="{Binding Login, StringFormat=Логин: {0}}"/>
+                                                <TextBlock Text="{Binding Password, StringFormat=Пароль: {0}}"/>
+                                            </StackPanel>
+                                        </Border>
                                         <ControlTemplate.Triggers>
                                             <Trigger Property="IsSelected" Value="True">
-                                                <Setter TargetName="TextBlock1" Property="FontWeight" Value="Bold"/>
+                                                <Setter TargetName="Border" Property="BorderThickness" Value="2"/>
                                             </Trigger>
                                         </ControlTemplate.Triggers>
                                     </ControlTemplate>
@@ -44,31 +51,37 @@
                             VerticalAlignment="Center"
                             Margin="10">
                     <TextBlock Text="Фамилия"/>
-                    <TextBox Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="0,0,0,5"/>
                     <TextBlock Text="Имя"/>
-                    <TextBox Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="0,0,0,5"/>
                     <TextBlock Text="Отчество"/>
-                    <TextBox Text="{Binding MiddleName, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Text="{Binding MiddleName, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="0,0,0,5"/>
                     <TextBlock Text="Логин"/>
-                    <TextBox Text="{Binding Login, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Text="{Binding Login, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="0,0,0,5"/>
                     <TextBlock Text="Пароль"/>
-                    <TextBox Text="{Binding Password, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Text="{Binding Password, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="0,0,0,5"/>
                     <TextBlock Text="Роль"/>
                     <ComboBox ItemsSource="{Binding Roles}"
                               SelectedItem="{Binding SelectedRole}"
-                              DisplayMemberPath="Title"/>
+                              DisplayMemberPath="Title"
+                              Margin="0,0,0,5"/>
                     <Button x:Name="AddUserButton"
                             Content="Добавить"
                             Click="AddUserButton_Click"
-                            Margin="0,10"/>
+                            Margin="0,10,0,4"/>
                     <Button x:Name="UpdateUserButton"
                             Content="Обновить"
                             Click="UpdateUserButton_Click"
-                            Margin="0,10"/>
+                            Margin="0,4"/>
                     <Button x:Name="RemoveUserButton"
                             Content="Удалить"
                             Click="RemoveUserButton_Click"
-                            Margin="0,10"/>
+                            Margin="0,4"/>
                 </StackPanel>
             </Grid>
         </TabItem>
@@ -80,22 +93,29 @@
                 </Grid.ColumnDefinitions>
                 <ListView Grid.Column="0"
                           SelectedItem="{Binding SelectedCurator}"
-                          ItemsSource="{Binding Curators}">
+                          ItemsSource="{Binding Curators}"
+                          ScrollViewer.VerticalScrollBarVisibility="Visible"
+                          VerticalAlignment="Stretch">
                     <ListView.ItemContainerStyle>
                         <Style TargetType="ListViewItem">
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate TargetType="ListViewItem">
-                                        <StackPanel>
-                                            <TextBlock Text="{Binding FullName, StringFormat=ФИО: {0}}"
+                                        <Border BorderThickness="1"
+                                                BorderBrush="Black"
+                                                Margin="4"
+                                                x:Name="Border">
+                                            <StackPanel Margin="3">
+                                                <TextBlock Text="{Binding FullName, StringFormat=ФИО: {0}}"
                                                        x:Name="TextBlock1"/>
-                                            <TextBlock Text="{Binding Organization.Title, StringFormat=Организация: {0}}"/>
-                                            <TextBlock Text="{Binding Login, StringFormat=Логин: {0}}"/>
-                                            <TextBlock Text="{Binding Password, StringFormat=Пароль: {0}}"/>
-                                        </StackPanel>
+                                                <TextBlock Text="{Binding Organization.Title, StringFormat=Организация: {0}}"/>
+                                                <TextBlock Text="{Binding Login, StringFormat=Логин: {0}}"/>
+                                                <TextBlock Text="{Binding Password, StringFormat=Пароль: {0}}"/>
+                                            </StackPanel>
+                                        </Border>
                                         <ControlTemplate.Triggers>
                                             <Trigger Property="IsSelected" Value="True">
-                                                <Setter TargetName="TextBlock1" Property="FontWeight" Value="Bold"/>
+                                                <Setter TargetName="Border" Property="BorderThickness" Value="2"/>
                                             </Trigger>
                                         </ControlTemplate.Triggers>
                                     </ControlTemplate>
@@ -108,31 +128,37 @@
                             VerticalAlignment="Center"
                             Margin="10">
                     <TextBlock Text="Фамилия"/>
-                    <TextBox Text="{Binding ClastName, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Text="{Binding ClastName, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="0,0,0,5"/>
                     <TextBlock Text="Имя"/>
-                    <TextBox Text="{Binding CfirstName, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Text="{Binding CfirstName, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="0,0,0,5"/>
                     <TextBlock Text="Отчество"/>
-                    <TextBox Text="{Binding CmiddleName, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Text="{Binding CmiddleName, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="0,0,0,5"/>
                     <TextBlock Text="Логин"/>
-                    <TextBox Text="{Binding Clogin, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Text="{Binding Clogin, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="0,0,0,5"/>
                     <TextBlock Text="Пароль"/>
-                    <TextBox Text="{Binding Cpassword, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Text="{Binding Cpassword, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="0,0,0,5"/>
                     <TextBlock Text="Организация"/>
                     <ComboBox ItemsSource="{Binding Organizations}"
                               SelectedItem="{Binding CselectedOrganization}"
-                              DisplayMemberPath="Title"/>
+                              DisplayMemberPath="Title"
+                              Margin="0,0,0,5"/>
                     <Button x:Name="AddCuratorButton"
                             Content="Добавить"
                             Click="AddCuratorButton_Click"
-                            Margin="0,10"/>
+                            Margin="0,10,0,4"/>
                     <Button x:Name="UpdateCuratorButton"
                             Content="Обновить"
                             Click="UpdateCuratorButton_Click"
-                            Margin="0,10"/>
+                            Margin="0,4"/>
                     <Button x:Name="RemoveCuratorButton"
                             Content="Удалить"
                             Click="RemoveCuratorButton_Click"
-                            Margin="0,10"/>
+                            Margin="0,4"/>
                 </StackPanel>
             </Grid>
         </TabItem>
@@ -144,19 +170,26 @@
                 </Grid.ColumnDefinitions>
                 <ListView Grid.Column="0"
                           SelectedItem="{Binding SelectedOrganization}"
-                          ItemsSource="{Binding Organizations}">
+                          ItemsSource="{Binding Organizations}"
+                          ScrollViewer.VerticalScrollBarVisibility="Visible"
+                          VerticalAlignment="Stretch">
                     <ListView.ItemContainerStyle>
                         <Style TargetType="ListViewItem">
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate TargetType="ListViewItem">
-                                        <StackPanel>
-                                            <TextBlock Text="{Binding Title}"
+                                        <Border BorderThickness="1"
+                                                BorderBrush="Black"
+                                                Margin="4"
+                                                x:Name="Border">
+                                            <StackPanel Margin="3">
+                                                <TextBlock Text="{Binding Title}"
                                                        x:Name="TextBlock1"/>
-                                        </StackPanel>
+                                            </StackPanel>
+                                        </Border>
                                         <ControlTemplate.Triggers>
                                             <Trigger Property="IsSelected" Value="True">
-                                                <Setter TargetName="TextBlock1" Property="FontWeight" Value="Bold"/>
+                                                <Setter TargetName="Border" Property="BorderThickness" Value="2"/>
                                             </Trigger>
                                         </ControlTemplate.Triggers>
                                     </ControlTemplate>
@@ -169,19 +202,20 @@
                             VerticalAlignment="Center"
                             Margin="10">
                     <TextBlock Text="Название"/>
-                    <TextBox Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="0,0,0,5"/>
                     <Button x:Name="AddOrganizationButton"
                             Content="Добавить"
                             Click="AddOrganizationButton_Click"
-                            Margin="0,10"/>
+                            Margin="0,10,0,4"/>
                     <Button x:Name="UpdateOrganizationButton"
                             Content="Обновить"
                             Click="UpdateOrganizationButton_Click"
-                            Margin="0,10"/>
+                            Margin="0,4"/>
                     <Button x:Name="RemoveOrganizationButton"
                             Content="Удалить"
                             Click="RemoveOrganizationButton_Click"
-                            Margin="0,10"/>
+                            Margin="0,4"/>
                 </StackPanel>
             </Grid>
         </TabItem>
@@ -195,21 +229,28 @@
                           SelectedItem="{Binding SelectedPractice}"
                           ItemsSource="{Binding Practices}"
                           MouseDoubleClick="PracticesListView_MouseDoubleClick"
-                          x:Name="PracticesListView">
+                          x:Name="PracticesListView"
+                          ScrollViewer.VerticalScrollBarVisibility="Visible"
+                          VerticalAlignment="Stretch">
                     <ListView.ItemContainerStyle>
                         <Style TargetType="ListViewItem">
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate TargetType="ListViewItem">
-                                        <StackPanel>
-                                            <TextBlock Text="{Binding Curator.Organization.Title}"
+                                        <Border BorderThickness="1"
+                                                BorderBrush="Black"
+                                                Margin="4"
+                                                x:Name="Border">
+                                            <StackPanel Margin="3">
+                                                <TextBlock Text="{Binding Curator.Organization.Title}"
                                                        x:Name="TextBlock1"/>
-                                            <TextBlock Text="{Binding Curator.FullName}"/>
-                                            <TextBlock Text="{Binding Dates}"/>
-                                        </StackPanel>
+                                                <TextBlock Text="{Binding Curator.FullName}"/>
+                                                <TextBlock Text="{Binding Dates}"/>
+                                            </StackPanel>
+                                        </Border>
                                         <ControlTemplate.Triggers>
                                             <Trigger Property="IsSelected" Value="True">
-                                                <Setter TargetName="TextBlock1" Property="FontWeight" Value="Bold"/>
+                                                <Setter TargetName="Border" Property="BorderThickness" Value="2"/>
                                             </Trigger>
                                         </ControlTemplate.Triggers>
                                     </ControlTemplate>
@@ -222,25 +263,28 @@
                             VerticalAlignment="Center"
                             Margin="10">
                     <TextBlock Text="Дата начала"/>
-                    <DatePicker SelectedDate="{Binding StartDate, UpdateSourceTrigger=PropertyChanged}"/>
+                    <DatePicker SelectedDate="{Binding StartDate, UpdateSourceTrigger=PropertyChanged}"
+                                Margin="0,0,0,5"/>
                     <TextBlock Text="Дата конца"/>
-                    <DatePicker SelectedDate="{Binding EndDate, UpdateSourceTrigger=PropertyChanged}"/>
+                    <DatePicker SelectedDate="{Binding EndDate, UpdateSourceTrigger=PropertyChanged}"
+                                Margin="0,0,0,5"/>
                     <TextBlock Text="Руководитель"/>
                     <ComboBox SelectedItem="{Binding PselectedCurator, UpdateSourceTrigger=PropertyChanged}"
                               ItemsSource="{Binding Curators}"
-                              DisplayMemberPath="CuratorInfo"/>
+                              DisplayMemberPath="CuratorInfo"
+                              Margin="0,0,0,5"/>
                     <Button x:Name="AddPracticeButton"
                             Content="Добавить"
                             Click="AddPracticeButton_Click"
-                            Margin="0,10"/>
+                            Margin="0,10,0,4"/>
                     <Button x:Name="UpdatePracticeButton"
                             Content="Обновить"
                             Click="UpdatePracticeButton_Click"
-                            Margin="0,10"/>
+                            Margin="0,4"/>
                     <Button x:Name="RemovePracticeButton"
                             Content="Удалить"
                             Click="RemovePracticeButton_Click"
-                            Margin="0,10"/>
+                            Margin="0,4"/>
                 </StackPanel>
             </Grid>
         </TabItem>
